Add size and border for images

--- a/assec/styles/style.css
+++ b/assec/styles/style.css
@@ -1,5 +1,3 @@
-
-
 .cards-container {}
 
 .title-conteiner {}
@@ -26,9 +24,7 @@ img.photo-profile {
 
 .adress-profile {}
 
-.icon-map {
-    
-}
+.icon-map {}
 
 .uppercase {}
 
