--- a/assec/styles/style.css
+++ b/assec/styles/style.css
@@ -10,6 +10,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.text-overflow {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 .cards-container {
     text-align: center;
     font-size: 24px;
